--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 <title></title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+<link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 
 <body>
-<h1>hello</h1>
 <div id="showdown_animation"></div>
 </body>
 
