--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <title></title>
 <meta name="description" content="">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="viewport" content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'>
 <link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 
 <body>
-<div id="showdown_animation"></div>
+<div id="container">
+  <div id="showdown_animation"></div>
+  <div id="wheel"></div>
+</div>
 </body>
 
 </html>
